# polymarket-copier

./: .env.example  .gitignore  approve_usdc.py  backtest_edge_strategy.py  btc_arb_hybrid.py  btc_arbitrage_bot.py  clob_markets_debug.json  config.py  crypto_edge_scanner.py  crypto_markets_found.json  crypto_markets_search_results.json  crypto_price_markets.json  dashboard.py  find_crypto_markets.py  hourly_arb_data.py  hourly_markets_data.json  hourly_trading_bot.py  hybrid_positions.json  main.py  market_sample.json  portfolio_history.json  pyproject.toml  redeem_positions.py  reference_prices.json  status.py  swap_usdc.py  test_bot.py  test_trade.py  verify_bot_plan.py
api/: __init__.py  clob_client.py  data_client.py
copier/: __init__.py  copy_engine.py
monitor/: __init__.py  trade_monitor.py
storage/: __init__.py  state.py
trade_logs/: 20260127_0900_BTC.json  20260127_0900_ETH.json  20260127_0900_SOL.json  20260127_1000_BTC.json  20260127_1000_ETH.json  20260127_1000_SOL.json  20260127_1100_BTC.json  20260127_1100_ETH.json  20260127_1100_SOL.json  20260127_1200_BTC.json  20260127_1200_ETH.json  20260127_1200_SOL.json  20260127_1300_BTC.json  20260127_1300_ETH.json  20260127_1300_SOL.json  20260127_1400_BTC.json  20260127_1400_ETH.json  20260127_1400_SOL.json  20260127_1500_BTC.json  20260127_1500_ETH.json  20260127_1500_SOL.json  20260127_1600_BTC.json  20260127_1600_ETH.json  20260127_1600_SOL.json  20260127_1700_BTC.json  20260127_1700_ETH.json  20260127_1700_SOL.json  20260127_1800_BTC.json  20260127_1800_ETH.json  20260127_1800_SOL.json  (+1077 more)
