[project]
name = "polymarket-copier"
version = "0.1.0"
description = "Copy trading bot for Polymarket - mirrors trades from a target account"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py-clob-client>=0.18.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "eth-account>=0.11.0",
    "web3>=6.15.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
]

[project.scripts]
polymarket-copier = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
